<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="4dp">

    <ImageView
        android:id="@+id/imageViewProduct"
        android:layout_width="130dp"
        android:layout_height="170dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/textViewAmazonChoicePartOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/text_amazons"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageViewProduct"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewProductName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="TextView"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageViewProduct"
        app:layout_constraintTop_toBottomOf="@+id/textViewAmazonChoicePartOne" />

    <TextView
        android:id="@+id/textViewAmazonChoicePartTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_choice"
        android:textColor="@android:color/holo_orange_dark"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textViewAmazonChoicePartOne"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewDeAmazon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/text_de_amazon"
        android:textSize="8sp"
        app:layout_constraintStart_toStartOf="@+id/textViewProductName"
        app:layout_constraintTop_toBottomOf="@+id/textViewProductName" />

    <TextView
        android:id="@+id/textViewPrecio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="TextView"
        android:textColor="@android:color/holo_red_dark"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageViewProduct"
        app:layout_constraintTop_toBottomOf="@+id/textViewDeAmazon" />

    <TextView
        android:id="@+id/textViewRecibirlo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/text_recibelo"
        android:textSize="8sp"
        app:layout_constraintStart_toStartOf="@+id/textViewPrecio"
        app:layout_constraintTop_toBottomOf="@+id/textViewPrecio" />

    <TextView
        android:id="@+id/textViewEnvioGratis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/text_envio_gratis"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textViewRecibirlo"
        app:layout_constraintTop_toBottomOf="@+id/textViewRecibirlo" />

    <RatingBar
        android:id="@+id/ratingBar"
        style="@style/Widget.AppCompat.RatingBar.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:numStars="5"
        android:theme="@style/RatingBar"
        app:layout_constraintStart_toStartOf="@+id/textViewEnvioGratis"
        app:layout_constraintTop_toBottomOf="@+id/textViewEnvioGratis" />

    <TextView
        android:id="@+id/textViewDisponible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/text_envio_gratis_disponible"
        android:textSize="8sp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewEnvioGratis"
        app:layout_constraintStart_toEndOf="@+id/textViewEnvioGratis" />

    <TextView
        android:id="@+id/textViewVotosRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="TextView"
        android:textSize="8sp"
        app:layout_constraintBottom_toBottomOf="@+id/ratingBar"
        app:layout_constraintStart_toEndOf="@+id/ratingBar"
        app:layout_constraintTop_toTopOf="@+id/ratingBar" />

    <TextView
        android:id="@+id/textViewVerOtrasVariantes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/text_ver_otras_variantes"
        android:textSize="8sp"
        app:layout_constraintStart_toStartOf="@+id/ratingBar"
        app:layout_constraintTop_toBottomOf="@+id/ratingBar" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:layout_marginStart="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewPrecio"
        app:layout_constraintStart_toEndOf="@+id/textViewPrecio"
        app:layout_constraintTop_toTopOf="@+id/textViewPrecio"
        app:srcCompat="@drawable/ic_check_orange_24dp" />

    <TextView
        android:id="@+id/textViewPrime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_prime"
        android:textColor="@android:color/holo_blue_bright"
        android:textSize="7sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textViewPrecio"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/textViewPrecio" />
</androidx.constraintlayout.widget.ConstraintLayout>